--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
     <footer>
         <p>
-            Site criado por <a href="https://github.com/Pedrinh01" target="_blank">Pedro Henrique</a> para o desafio do <a href="https://www.youtube.com/cursoemvideo" target="_blank">curso em video</a> 
+            Site criado por <a href="https://github.com/PedrootaldoMagalhaes" target="_blank">Pedro Henrique</a> para o desafio do <a href="https://www.youtube.com/cursoemvideo" target="_blank">curso em video</a> 
         </p>
 
     </footer>
